--- a/templates/IndoreAgainstCovid.html
+++ b/templates/IndoreAgainstCovid.html
@@ -44,40 +44,40 @@
 					<h1>IndoreAgainstCovid</h1>
 				    <h3>The Helping Hand To People</h3>
 				    <hr>
-				    <form>
+				    <form method="post">
     <label class="radio-inline">
-      <input type="radio" name="data">Bed(s)
+      <input type="radio" name="data" value="1">Bed(s)
     </label>
     <label class="radio-inline">
-      <input type="radio" name="data">ICU
+      <input type="radio" name="data" value="2">ICU
     </label>
     <label class="radio-inline">
-      <input type="radio" name="data">Oxygen Supply
+      <input type="radio" name="data" value="3">Oxygen Supply
     </label>
     <label class="radio-inline">
-      <input type="radio" name="data">Ventilator(s)
+      <input type="radio" name="data" value="4">Ventilator(s)
     </label>
     <label class="radio-inline">
-      <input type="radio" name="data">Test(s)
+      <input type="radio" name="data" value="5">Test(s)
     </label>
     <label class="radio-inline">
-      <input type="radio" name="data">Remdesivir
+      <input type="radio" name="data" value="6">Remdesivir
     </label>
     <label class="radio-inline">
-      <input type="radio" name="data">Favipiravir
+      <input type="radio" name="data" value="7">Favipiravir
     </label>
     <label class="radio-inline">
-      <input type="radio" name="data">Tocilizumab
+      <input type="radio" name="data" value="8">Tocilizumab
     </label>
     <label class="radio-inline">
-      <input type="radio" name="data">Plasma
+      <input type="radio" name="data" value="9">Plasma
     </label>
     <label class="radio-inline">
-      <input type="radio" name="data">Food Supply
-    </label>
-
+      <input type="radio" name="data" value="10">Food Supply
+    </label><br><br>
+		<button class="btn btn-default btn-danger btn-lg">Search</button>
   </form>
-				    <button class="btn btn-default btn-danger btn-lg">Submit</button>
+
 				</div>
 			</div>
 		</div>
