--- a/templates/IndoreAgainstCovid.html
+++ b/templates/IndoreAgainstCovid.html
@@ -27,10 +27,6 @@
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
-				<!-- <ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Sign Up<i class="fa fa-user-plus"></i></a></li>
-					<li><a href="#">Login<i class="fa fa-user"></i></a></li>
-				</ul> -->
 			</div>
 		</div>
 	</nav>
@@ -41,37 +37,37 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="content">
-					<h1>IndoreAgainstCovid</h1>
+					<h1>Indore Against Covid</h1>
 				    <h3>The Helping Hand To People</h3>
 				    <hr>
 				    <form method="post">
     <label class="radio-inline">
       <input type="radio" name="data" value="1">Bed(s)
-    </label>
+    </label> &nbsp;
     <label class="radio-inline">
       <input type="radio" name="data" value="2">ICU
-    </label>
+    </label> &nbsp;
     <label class="radio-inline">
       <input type="radio" name="data" value="3">Oxygen Supply
-    </label>
+    </label><br>
     <label class="radio-inline">
       <input type="radio" name="data" value="4">Ventilator(s)
-    </label>
+    </label> &nbsp;
     <label class="radio-inline">
       <input type="radio" name="data" value="5">Test(s)
-    </label>
+    </label> &nbsp;
     <label class="radio-inline">
       <input type="radio" name="data" value="6">Remdesivir
-    </label>
+    </label><br>
     <label class="radio-inline">
       <input type="radio" name="data" value="7">Favipiravir
-    </label>
+    </label> &nbsp;
     <label class="radio-inline">
       <input type="radio" name="data" value="8">Tocilizumab
-    </label>
+    </label> &nbsp;
     <label class="radio-inline">
       <input type="radio" name="data" value="9">Plasma
-    </label>
+    </label><br>
     <label class="radio-inline">
       <input type="radio" name="data" value="10">Food Supply
     </label><br><br>
