--- a/templates/IndoreAgainstCovid.html
+++ b/templates/IndoreAgainstCovid.html
@@ -5,6 +5,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="static/covid.css">
+	    <link href="{{ url_for('static', filename='logo.jpg')}}" rel="icon">
+
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
