--- a/templates/IndoreAgainstCovid.html
+++ b/templates/IndoreAgainstCovid.html
@@ -5,8 +5,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="static/covid.css">
-	    <link href="{{ url_for('static', filename='logo.jpg')}}" rel="icon">
-
+	<link href="{{ url_for('static', filename='logo.jpg')}}" rel="icon">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -82,16 +81,54 @@
 	</div>
 	</section>
 
-    <section id="about" class="container-fluid">
+   <section id="about" class="theme1 container-fluid ">
     	<div class="row">
-			<div class="col-lg-12">
-				<div class="content">
+            <div class="col-md-12 text-center">
+
+				<div class="content1">
 					<h2>About</h2>
-					<p>This is a open source website for Covid-19 related information and help. Information on this website is provided through Twitter.</p>
+
+					<p>This is an open platform for Covid-19 related information and help. Information on this website is provided through Twitter.
+					On clicking the above option and then on clicking "submit", you will be directed to the latest updates on Twitter.</p>
+				</div>
+
+		</div>
+	</div>
+    </section>
+
+	<section id="contact" class="theme2 container-fluid ">
+    	<div class="row">
+			<div class="col-md-4 text-center">
+				<div class="content2">
+					<h2>Contact Us</h2>
+
+					<p>Anurag Sawle</p>
+					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> anuragsawle70@gmail.com</p>
+					<a href="https://instagram.com/anuragsawle.py?igshid=a29yue44giue"><i class="fa fa-instagram" aria-hidden="true"></i> @anuragsawle.py</a>
+				</div>
+			</div>
+			<div class="col-md-4 text-center">
+				<div class="content2">
+					<p id="creator">Milind Bajaj</p>
+					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> milindbajaj99@gmail.com</p>
+					<a href="https://instagram.com/_milindbajaj?igshid=h479jl76pn1"><i class="fa fa-instagram" aria-hidden="true"></i> @_milind</a>
+				</div>
+			</div>
+			<div class="col-md-4 text-center">
+				<div class="content2">
+					<p id="creator">Akshitha Anil</p>
+					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> akshi42133@gmail.com</p>
+					<a href="https://instagram.com/anilakshitha?igshid=1w1pqrrjtbwmx"><i class="fa fa-instagram" aria-hidden="true"></i> @anilakshitha</a>
 				</div>
 			</div>
 		</div>
     </section>
+
+    <footer>
+        <div class="text-center">PRIVACY POLICY .
+        <a class="text-light foot" href="#">IndoreAgainstCovid</a>
+         </div>
+    </footer>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
