--- a/templates/IndoreAgainstCovid.html
+++ b/templates/IndoreAgainstCovid.html
@@ -98,11 +98,10 @@
 
 	<section id="contact" class="theme2 container-fluid ">
     	<div class="row">
+			<h2>Contact Us</h2>
 			<div class="col-md-4 text-center">
 				<div class="content2">
-					<h2>Contact Us</h2>
-
-					<p>Anurag Sawle</p>
+					<p id="creator">Anurag Sawle</p>
 					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> anuragsawle70@gmail.com</p>
 					<a href="https://instagram.com/anuragsawle.py?igshid=a29yue44giue"><i class="fa fa-instagram" aria-hidden="true"></i> @anuragsawle.py</a>
 				</div>
@@ -111,14 +110,14 @@
 				<div class="content2">
 					<p id="creator">Milind Bajaj</p>
 					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> milindbajaj99@gmail.com</p>
-					<a href="https://instagram.com/_milindbajaj?igshid=h479jl76pn1"><i class="fa fa-instagram" aria-hidden="true"></i> @_milind</a>
+					<a href="https://instagram.com/_milindbajaj?igshid=h479jl76pn1"><i class="fa fa-instagram" aria-hidden="true"></i> @_milindbajaj</a>
 				</div>
 			</div>
 			<div class="col-md-4 text-center">
 				<div class="content2">
 					<p id="creator">Akshitha Anil</p>
 					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> akshi42133@gmail.com</p>
-					<a href="https://instagram.com/anilakshitha?igshid=1w1pqrrjtbwmx"><i class="fa fa-instagram" aria-hidden="true"></i> @anilakshitha</a>
+					<a href="https://instagram.com/anilakshitha?igshid=1w1pqrrjtbwmx"><i class="fa fa-instagram" aria-hidden="true" ></i> @anilakshitha</a>
 				</div>
 			</div>
 		</div>
