--- a/templates/IndoreAgainstCovid.html
+++ b/templates/IndoreAgainstCovid.html
@@ -88,8 +88,7 @@
 				<div class="content1">
 					<h2>About</h2>
 
-					<p>This is an open platform for Covid-19 related information and help. Information on this website is provided through Twitter.
-					On clicking the above option and then on clicking "submit", you will be directed to the latest updates on Twitter.</p>
+					<p>This is an open platform for Covid-19 related information and help. Information on this website is provided through Twitter.</p>
 				</div>
 
 		</div>
