--- a/templates/IndoreAgainstCovid.html
+++ b/templates/IndoreAgainstCovid.html
@@ -20,19 +20,19 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-				<a href="#" class="navbar-brand"><i class="fa fa-hand-rock-o" aria-hidden="true"></i> IndoreAgainstCovid</a>
+				<a href="#home" class="navbar-brand"><i class="fa fa-hand-rock-o" aria-hidden="true"></i> IndoreAgainstCovid</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-nav-demo">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 
-	<section>
+	<section id="home" class="container-fluid px-0">
 
 	<div class="container">
 		<div class="row">
@@ -41,66 +41,64 @@
 					<h1>Indore Against Covid</h1>
 				    <h3>The Helping Hand To People</h3>
 				    <hr>
-				    <form method="post" id="form">
-    <label class="radio-inline">
-      <input type="radio" name="data" value="1">Bed(s)
-    </label> &nbsp;
-    <label class="radio-inline">
-      <input type="radio" name="data" value="2">ICU
-    </label> &nbsp;
-    <label class="radio-inline">
-      <input type="radio" name="data" value="3">Oxygen Supply
-    </label><br>
-    <label class="radio-inline">
-      <input type="radio" name="data" value="4">Ventilator(s)
-    </label> &nbsp;
-    <label class="radio-inline">
-      <input type="radio" name="data" value="5">Test(s)
-    </label> &nbsp;
-    <label class="radio-inline">
-      <input type="radio" name="data" value="6">Remdesivir
-    </label><br>
-    <label class="radio-inline">
-      <input type="radio" name="data" value="7">Favipiravir
-    </label> &nbsp;
-    <label class="radio-inline">
-      <input type="radio" name="data" value="8">Tocilizumab
-    </label> &nbsp;
-    <label class="radio-inline">
-      <input type="radio" name="data" value="9">Plasma
-    </label><br>
-    <label class="radio-inline">
-      <input type="radio" name="data" value="10">Food Supply
-    </label><br><br>
-		<button class="btn btn-default btn-danger btn-lg">Search</button>
-  </form>
-
+				    <form method="post">
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="1">Bed(s)
+					</label> &nbsp;
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="2">ICU
+					</label> &nbsp;
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="3">Oxygen Supply
+					</label><br>
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="4">Ventilator(s)
+					</label> &nbsp;
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="5">Test(s)
+					</label> &nbsp;
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="6">Remdesivir
+					</label><br>
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="7">Favipiravir
+					</label> &nbsp;
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="8">Tocilizumab
+					</label> &nbsp;
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="9">Plasma
+					</label><br>
+					<label class="radio-inline">
+					  <input type="radio" name="data" value="10">Food Supply
+					</label><br><br>
+						<button class="btn btn-default btn-danger btn-lg">Search</button>
+				  </form>
 				</div>
 			</div>
 		</div>
 	</div>
 	</section>
 
-   <section id="about" class="theme1 container-fluid ">
+    <section id="about" class="theme1 container-fluid ">
     	<div class="row">
             <div class="col-md-12 text-center">
 
 				<div class="content1">
 					<h2>About</h2>
-
-					<p>This is an open platform for Covid-19 related information and help. Information on this website is provided through Twitter.</p>
+					<p>This is an open platform for Covid-19 related information and help. Information on this website is provided through Twitter. We will suggest you to verify by yourself before any payment and for latest news you can switch you latest tab.</p>
 				</div>
 
 		</div>
 	</div>
     </section>
 
-	<section id="contact" class="theme2 container-fluid ">
+    <section id="contact" class="theme2 container-fluid ">
     	<div class="row">
 			<h2>Contact Us</h2>
 			<div class="col-md-4 text-center">
 				<div class="content2">
-					<p id="creator">Anurag Sawle</p>
+					<p>Anurag Sawle</p>
 					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> anuragsawle70@gmail.com</p>
 					<a href="https://instagram.com/anuragsawle.py?igshid=a29yue44giue"><i class="fa fa-instagram" aria-hidden="true"></i> @anuragsawle.py</a>
 				</div>
@@ -109,14 +107,14 @@
 				<div class="content2">
 					<p id="creator">Milind Bajaj</p>
 					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> milindbajaj99@gmail.com</p>
-					<a href="https://instagram.com/_milindbajaj?igshid=h479jl76pn1"><i class="fa fa-instagram" aria-hidden="true"></i> @_milindbajaj</a>
+					<a href="https://instagram.com/_milindbajaj?igshid=h479jl76pn1"><i class="fa fa-instagram" aria-hidden="true"></i> @_milind</a>
 				</div>
 			</div>
 			<div class="col-md-4 text-center">
 				<div class="content2">
 					<p id="creator">Akshitha Anil</p>
 					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> akshi42133@gmail.com</p>
-					<a href="https://instagram.com/anilakshitha?igshid=1w1pqrrjtbwmx"><i class="fa fa-instagram" aria-hidden="true" ></i> @anilakshitha</a>
+					<a href="https://instagram.com/anilakshitha?igshid=1w1pqrrjtbwmx"><i class="fa fa-instagram" aria-hidden="true"></i> @anilakshitha</a>
 				</div>
 			</div>
 		</div>
