--- a/templates/IndoreAgainstCovid.html
+++ b/templates/IndoreAgainstCovid.html
@@ -25,14 +25,14 @@
 			<div class="collapse navbar-collapse" id="bs-nav-demo">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#Contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 
-	<section>
+	<section id="home" class="container-fluid px-0">
 
 	<div class="container">
 		<div class="row">
@@ -87,10 +87,8 @@
 
 				<div class="content1">
 					<h2>About</h2>
-
-					<p>This is an open platform for Covid-19 related information and help. Information on this website is provided through Twitter.</p>
+					<p>This is an open platform for Covid-19 related information and help. Information on this website is provided through Twitter. We will suggest you to verify by yourself before any payment and for latest news you can switch you latest tab.</p>
 				</div>
-
 		</div>
 	</div>
     </section>
@@ -100,7 +98,7 @@
 			<h2>Contact Us</h2>
 			<div class="col-md-4 text-center">
 				<div class="content2">
-					<p id="creator">Anurag Sawle</p>
+					<p>Anurag Sawle</p>
 					<p><i class="fa fa-envelope-o" aria-hidden="true"></i> anuragsawle70@gmail.com</p>
 					<a href="https://instagram.com/anuragsawle.py?igshid=a29yue44giue"><i class="fa fa-instagram" aria-hidden="true"></i> @anuragsawle.py</a>
 				</div>
